Thu Mar 24 14:19:33 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-sort.rb, p-injext.rb: [BUG#302]対応

Tue Mar 22 12:26:37 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/p-xgroup-by.c: 追加
	
	* fairy.c, fairy.h: rb_FairyEOSをsymbolに変更. rb_cFairyProcessor,
	  rb_cFairyImport, rb_cFairyImportCTLROLEN* 追加
	  C-API: rb_fairy_processor_def_export 追加.
	  PXGroupBy対応.
	* simple-hash.c: C-API: rb_fairy_simple_hash_uinit追加
	* group-by.rb, c-group-by.rb: PXGroupBy対応.
	* processor.rb: Processor#startexportをfairy.so require後に変更


Sat Mar 19 16:09:01 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy: cache機能追加による再生成

Thu Mar 17 23:43:30 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled-queue.c: rb_fairy_xmarshaled_queue_popにバグがあった.

Thu Mar 17 20:26:03 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c: cache機能追加
	* conf.rb: 上記のためのプロパティ追加

Wed Mar 16 21:23:29 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy: confプロパティ追加にともない再生成
	* xmarshaled-queue.c, conf.rb: log mstore機能追加

Wed Mar 16 19:43:40 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy: confプロパティ追加にともない再生成
	* fairy.h, fairy.c: conf, logインターフェース追加
	* xmarshaled-queue.c: confインターフェースに対応
	* fairy.rb, controller.rb, master.rb, node.rb, processor.rb,
	  port.rb, port-xmarshaled-queue.rb(削除): fairy.soロードメカニズム変更

Wed Mar 16 11:07:12 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/extconf.rb: fiaryライブラリ改名
	* fairy.c, fairy.h, simple-hash.c, string-buffer.c, xmarshaled-queue.c:
	  fairy.h, fairy.c 導入による変更.
	
	* fairy.rb, controller.rb, master.rb, node.rb, processor.rb,
	  hash-simple-hash.rb, : fairy.soロードメカニズム変更

Tue Mar 15 20:38:32 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* simple-hash.c xmarshaled-queue.c: 改名した

Tue Mar 15 20:33:57 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext以下を統合した

Tue Mar 15 14:27:05 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c: XMarshaledQueue#initializeにバグがあった,
	  XMarshaledQueue#inspect追加